--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@visx/axis": "^2.14.0",
+    "@visx/event": "^2.6.0",
     "@visx/group": "^2.10.0",
     "@visx/mock-data": "^2.15.1",
     "@visx/scale": "^2.2.2",
     "@visx/shape": "^2.12.2",
+    "@visx/tooltip": "^2.16.0",
     "graphql": "^16.6.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
